<resources>
    <string name="app_name">homework02</string>
    <string name="delivery">Delivery</string>
    <string name="pick_topping">Choose a Topping</string>
    <string-array name="toppings_array">
        <item name="bacon">"Bacon"</item>
        <item name="cheese">"Cheese"</item>
        <item name="garlic">"Garlic"</item>
        <item name="green_pepper">"Green Pepper"</item>
        <item name="mushroom">"Mushroom"</item>
        <item name="olive">"Olives"</item>
        <item name="onion">"Onions"</item>
        <item name="red_pepper">"Red Pepper"</item>
    </string-array>
    <string name="addTopping">Add Topping</string>
    <string name="clearPizza">Clear Pizza</string>
    <string name="checkOut">Check Out</string>
    <string name="yourOrder">Your Order</string>
    <string name="basePrice">Base Price:</string>
    <string name="toppings">Toppings:</string>
    <string name="deliveryCost">Delivery Cost:</string>
    <string name="total">TOTAL:</string>
</resources>
